--- a/bike_store_sales.ipynb
+++ b/bike_store_sales.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "bike_store_sales.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM65VZuOrLt6MIrgxuEy+xJ",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN/hOmo85ydK1nH5Epo0xeJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +29,379 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "kyGDOgJQNizb"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        ""
+        "**Bike store sales**"
+      ],
+      "metadata": {
+        "id": "95blyBrPObd7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "%matplotlib inline"
+      ],
+      "metadata": {
+        "id": "qZ5_C13jOfFg"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!head data/sales_data.csv"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oOzbSmfuPsIY",
+        "outputId": "f8ee5e1f-ff2e-4e65-8a7c-9138a1b98904"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Date,Day,Month,Year,Customer_Age,Age_Group,Customer_Gender,Country,State,Product_Category,Sub_Category,Product,Order_Quantity,Unit_Cost,Unit_Price,Profit,Cost,Revenue\n",
+            "2013-11-26,26,November,2013,19,Youth (<25),M,Canada,British Columbia,Accessories,Bike Racks,Hitch Rack - 4-Bike,8,45,120,590,360,950\n",
+            "2015-11-26,26,November,2015,19,Youth (<25),M,Canada,British Columbia,Accessories,Bike Racks,Hitch Rack - 4-Bike,8,45,120,590,360,950\n",
+            "2014-03-23,23,March,2014,49,Adults (35-64),M,Australia,New South Wales,Accessories,Bike Racks,Hitch Rack - 4-Bike,23,45,120,1366,1035,2401\n",
+            "2016-03-23,23,March,2016,49,Adults (35-64),M,Australia,New South Wales,Accessories,Bike Racks,Hitch Rack - 4-Bike,20,45,120,1188,900,2088\n",
+            "2014-05-15,15,May,2014,47,Adults (35-64),F,Australia,New South Wales,Accessories,Bike Racks,Hitch Rack - 4-Bike,4,45,120,238,180,418\n",
+            "2016-05-15,15,May,2016,47,Adults (35-64),F,Australia,New South Wales,Accessories,Bike Racks,Hitch Rack - 4-Bike,5,45,120,297,225,522\n",
+            "2014-05-22,22,May,2014,47,Adults (35-64),F,Australia,Victoria,Accessories,Bike Racks,Hitch Rack - 4-Bike,4,45,120,199,180,379\n",
+            "2016-05-22,22,May,2016,47,Adults (35-64),F,Australia,Victoria,Accessories,Bike Racks,Hitch Rack - 4-Bike,2,45,120,100,90,190\n",
+            "2014-02-22,22,February,2014,35,Adults (35-64),M,Australia,Victoria,Accessories,Bike Racks,Hitch Rack - 4-Bike,22,45,120,1096,990,2086\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales = pd.read_csv(\n",
+        "    'data/sales_data.csv',\n",
+        "    parse_dates=['Date'])"
+      ],
+      "metadata": {
+        "id": "RLPkidctOkV6"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 444
+        },
+        "id": "T54aZ_FrRkbJ",
+        "outputId": "4b752c58-8641-43e4-8577-a45f5853d24d"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "        Date  Day     Month  Year  Customer_Age       Age_Group  \\\n",
+              "0 2013-11-26   26  November  2013            19     Youth (<25)   \n",
+              "1 2015-11-26   26  November  2015            19     Youth (<25)   \n",
+              "2 2014-03-23   23     March  2014            49  Adults (35-64)   \n",
+              "3 2016-03-23   23     March  2016            49  Adults (35-64)   \n",
+              "4 2014-05-15   15       May  2014            47  Adults (35-64)   \n",
+              "\n",
+              "  Customer_Gender    Country             State Product_Category Sub_Category  \\\n",
+              "0               M     Canada  British Columbia      Accessories   Bike Racks   \n",
+              "1               M     Canada  British Columbia      Accessories   Bike Racks   \n",
+              "2               M  Australia   New South Wales      Accessories   Bike Racks   \n",
+              "3               M  Australia   New South Wales      Accessories   Bike Racks   \n",
+              "4               F  Australia   New South Wales      Accessories   Bike Racks   \n",
+              "\n",
+              "               Product  Order_Quantity  Unit_Cost  Unit_Price  Profit    Cost  \\\n",
+              "0  Hitch Rack - 4-Bike             8.0       45.0       120.0   590.0   360.0   \n",
+              "1  Hitch Rack - 4-Bike             8.0       45.0       120.0   590.0   360.0   \n",
+              "2  Hitch Rack - 4-Bike            23.0       45.0       120.0  1366.0  1035.0   \n",
+              "3  Hitch Rack - 4-Bike            20.0       45.0       120.0  1188.0   900.0   \n",
+              "4  Hitch Rack - 4-Bike             4.0       45.0       120.0   238.0   180.0   \n",
+              "\n",
+              "   Revenue  \n",
+              "0    950.0  \n",
+              "1    950.0  \n",
+              "2   2401.0  \n",
+              "3   2088.0  \n",
+              "4    418.0  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-1c0f4b42-5d9e-4e2a-bded-9aef442e7fdc\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Date</th>\n",
+              "      <th>Day</th>\n",
+              "      <th>Month</th>\n",
+              "      <th>Year</th>\n",
+              "      <th>Customer_Age</th>\n",
+              "      <th>Age_Group</th>\n",
+              "      <th>Customer_Gender</th>\n",
+              "      <th>Country</th>\n",
+              "      <th>State</th>\n",
+              "      <th>Product_Category</th>\n",
+              "      <th>Sub_Category</th>\n",
+              "      <th>Product</th>\n",
+              "      <th>Order_Quantity</th>\n",
+              "      <th>Unit_Cost</th>\n",
+              "      <th>Unit_Price</th>\n",
+              "      <th>Profit</th>\n",
+              "      <th>Cost</th>\n",
+              "      <th>Revenue</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2013-11-26</td>\n",
+              "      <td>26</td>\n",
+              "      <td>November</td>\n",
+              "      <td>2013</td>\n",
+              "      <td>19</td>\n",
+              "      <td>Youth (&lt;25)</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Canada</td>\n",
+              "      <td>British Columbia</td>\n",
+              "      <td>Accessories</td>\n",
+              "      <td>Bike Racks</td>\n",
+              "      <td>Hitch Rack - 4-Bike</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>45.0</td>\n",
+              "      <td>120.0</td>\n",
+              "      <td>590.0</td>\n",
+              "      <td>360.0</td>\n",
+              "      <td>950.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2015-11-26</td>\n",
+              "      <td>26</td>\n",
+              "      <td>November</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>19</td>\n",
+              "      <td>Youth (&lt;25)</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Canada</td>\n",
+              "      <td>British Columbia</td>\n",
+              "      <td>Accessories</td>\n",
+              "      <td>Bike Racks</td>\n",
+              "      <td>Hitch Rack - 4-Bike</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>45.0</td>\n",
+              "      <td>120.0</td>\n",
+              "      <td>590.0</td>\n",
+              "      <td>360.0</td>\n",
+              "      <td>950.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2014-03-23</td>\n",
+              "      <td>23</td>\n",
+              "      <td>March</td>\n",
+              "      <td>2014</td>\n",
+              "      <td>49</td>\n",
+              "      <td>Adults (35-64)</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Australia</td>\n",
+              "      <td>New South Wales</td>\n",
+              "      <td>Accessories</td>\n",
+              "      <td>Bike Racks</td>\n",
+              "      <td>Hitch Rack - 4-Bike</td>\n",
+              "      <td>23.0</td>\n",
+              "      <td>45.0</td>\n",
+              "      <td>120.0</td>\n",
+              "      <td>1366.0</td>\n",
+              "      <td>1035.0</td>\n",
+              "      <td>2401.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2016-03-23</td>\n",
+              "      <td>23</td>\n",
+              "      <td>March</td>\n",
+              "      <td>2016</td>\n",
+              "      <td>49</td>\n",
+              "      <td>Adults (35-64)</td>\n",
+              "      <td>M</td>\n",
+              "      <td>Australia</td>\n",
+              "      <td>New South Wales</td>\n",
+              "      <td>Accessories</td>\n",
+              "      <td>Bike Racks</td>\n",
+              "      <td>Hitch Rack - 4-Bike</td>\n",
+              "      <td>20.0</td>\n",
+              "      <td>45.0</td>\n",
+              "      <td>120.0</td>\n",
+              "      <td>1188.0</td>\n",
+              "      <td>900.0</td>\n",
+              "      <td>2088.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2014-05-15</td>\n",
+              "      <td>15</td>\n",
+              "      <td>May</td>\n",
+              "      <td>2014</td>\n",
+              "      <td>47</td>\n",
+              "      <td>Adults (35-64)</td>\n",
+              "      <td>F</td>\n",
+              "      <td>Australia</td>\n",
+              "      <td>New South Wales</td>\n",
+              "      <td>Accessories</td>\n",
+              "      <td>Bike Racks</td>\n",
+              "      <td>Hitch Rack - 4-Bike</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>45.0</td>\n",
+              "      <td>120.0</td>\n",
+              "      <td>238.0</td>\n",
+              "      <td>180.0</td>\n",
+              "      <td>418.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c0f4b42-5d9e-4e2a-bded-9aef442e7fdc')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-1c0f4b42-5d9e-4e2a-bded-9aef442e7fdc button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-1c0f4b42-5d9e-4e2a-bded-9aef442e7fdc');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NBmf2Z93SOoF",
+        "outputId": "4a9cc677-8235-4562-82c7-3b77ac60d50a"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(47125, 18)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
       ]
     }
   ]
